* Talk (he's not much of a talker).
* Work (with some background scenes). Builds friendship.
* Flirt, from innocent to lewd. Builds his confidence.
* Lay claim on Gwendy and be a general Jerk to Adrian. Makes him jealous of you.
* Seduction that leads to opening up sex options. Currently:
 - Give him a handjob.
 - Give him a blowjob.

The sex scenes are relatively short but contains a lot of variation based on state, randomness and choices.

Also:
* Gwendy's Work option will randomly send you to help Adrian.
* Gwendy has some dialog variations when talking about Adrian, depending on his current state.

--------------------------------------------
             PREVIOUS VERSIONS
--------------------------------------------

Version 0.5.5
-------------
* Bugfix: Introduction Review bug that would eventually cause issues with the parser.
* Bugfix: Fixed an error in the Catboy Mage AI.
* Various typos fixed.
* Added new $20 patreons from 0.5.x to credits.

Adding 10k words of new content:
* A new loss scene for Gwendy with a lot of variation (though a part of it is locked behind a flag that is not ingame yet).
* A complex interconnect of scenes that allows for you to:
 - Avoid getting fucked by Gwendy (applies to both the strap-on and double dildo scene), even if you lost to her.
 - Later give in and submit to her.
 - Turn things around and dominate her if you have a high SubDom score.
 - Bypass the challenge structure entirely, either submitting or dominating. This requires that you've won or lost at least three times (that you've gotten the Oral tier challenge scene). The submit version has some shenanigans in it.

Version 0.5.4
-------------
* Bugfix: there was a bug where alchemy would fail if you didn't already have any of the item being crafted in your inventory.
* Bugfix: Fixed Gol Tailfuck/Hyperfuck scene prompt.
* Bugfix: Gwendy's Win scenes were capped to Titjob/Tease level. This has been fixed, and the rest of the scenes can be accessed once again.