@@ -1072,7 +1072,7 @@ FarmLoc.Fields.events.push(new Link(
 FarmLoc.Barn.events.push(new Link(
     "Adrian", () => {
         const adrian: Adrian = GAME().adrian;
-        return adrian.IsAtLocation(FarmLoc.Barn);
+        return adrian.IsAtLocation(FarmLoc.Barn) && !adrian.IsAsleep();
     }, true,
     () => {
         AdrianScenes.AdrianDesc(FarmLoc.Barn);
