@@ -21,6 +21,7 @@ Adding 16k words of new content, revolving around Adrian the farmhand. He's a co
 * Seduction that leads to opening up sex options. Currently:
  - Give him a handjob.
  - Give him a blowjob.
+* In order to be able to explore the new content, a RESET option is available for Adrian. It will only show up in debug mode, and will probably be removed when his content is more complete.
 
 The sex scenes are relatively short but contains a lot of variation based on state, randomness and choices.
 
